# bloodspilot-clients-cpp

./: .gitignore  CMakeLists.txt  ChangeLog  ChangeLog.454  INSTALL  INSTALL.ubuntu  README.md  TODO  build-454.sh  build-x11.sh  cmake-build.sh  cmake-clean.sh  cmake-install.sh
cmake/: config.h.in
src/: CMakeLists.txt
src/client/: CMakeLists.txt  arraylist.cpp  arraylist.h  astershape.h  bit.h  blockmap.c  blockmap.cpp  caudio.c  caudio.cpp  caudio.h  checknames.c  checknames.cpp  client.c  client.cpp  client.h  clientcommand.c  clientcommand.cpp  clientrank.c  clientrank.cpp  clientrank.h  color-codes.c  color-codes.cpp  configure.h  const.h  datagram.c  datagram.cpp  datagram.h  default.c  default.cpp  error.h  event.c  event.cpp  frame.c  frame.cpp  frame.h  gfx2d.c  gfx2d.cpp  gfx2d.h  global.c  global.cpp  (+77 more)
src/client/454/: CMakeLists.txt  about.c  about.cpp  astershape.h  audio.h  bit.h  blockbitmaps.c  blockbitmaps.cpp  blockbitmaps.h  caudio.c  caudio.cpp  caudio.h  checknames.c  checknames.cpp  checknames.h  client.c  client.cpp  client.h  colors.c  colors.cpp  commonproto.h  configure.c  configure.cpp  configure.h  connectparam.h  const.h  datagram.c  datagram.cpp  datagram.h  dbuff.c  dbuff.cpp  dbuff.h  debugaudio.c  debugaudio.cpp  default.c  default.cpp  default.h  draw.h  error.cpp  error.h  (+108 more)
src/client/x11/: CMakeLists.txt  about.c  about.cpp  audio.h  bitmaps.c  bitmaps.cpp  bitmaps.h  colors.c  colors.cpp  configure.c  configure.cpp  dbuff.c  dbuff.cpp  dbuff.h  guimap.c  guimap.cpp  guiobjects.c  guiobjects.cpp  icon.h  join.c  join.cpp  paintdata.c  paintdata.cpp  paintdata.h  painthud.c  painthud.cpp  painthudradar.c  painthudradar.cpp  paintmessages.c  paintmessages.cpp  paintscorelist.c  paintscorelist.cpp  record.c  record.cpp  record.h  talk.c  talk.cpp  welcome.c  welcome.cpp  widget.c  (+20 more)
src/common/: bit.h  checknames.cpp  checknames.h  commonproto.h  const.h  item.h  keys.h  list.cpp  list.h  metaserver.h  net.cpp  net.h  pack-ng.h  pack.h  packet.cpp  packet.h  pkttypes.h  portability.cpp  portability.h  randommt.cpp  recordfmt.h  rules.h  setup.h  shipshape.cpp  shipshape.h  socklib.cpp  socklib.h  sysdeps.h  types.h  version.h  version.h.in  wreckshape.h  xpconfig.cpp  xpconfig.h  xperror.cpp  xperror.h  xpmath.cpp
src/replay/: CMakeLists.txt  buttons.c  buttons.cpp  buttons.h  const.h  item.h  recordfmt.h  types.h  xp-replay.c  xp-replay.cpp  xp-replay.h  xpcommon.h  xpconfig.h  xpilot-replay.cpp  xpilot-replay.h
